themes/tokenshift/assets/scss/main.scss
body {
	font-family: sans-serif;
	font-size: 120%;
	line-height: 1.5;
	margin: 0.5em 1em;
}

a {
	font-weight: bold;
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

.home-page-stack {
	align-items: center;
	display: flex;
	flex-direction: column;
}

.home-page-splash {
	align-items: center;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	text-align: center;

	&__avatar {
		margin: 0 2em;
	}

	&__email {
		font-family: "Lucida Console", "Consolas", "Andale Mono", monospace;
		white-space: pre;
	}
}

.home-page-listing {
	&__entries {
		display: inline-flex;
		flex-direction: column;
		text-align: left;
	}

	&__entry {
		align-items: center;
		display: flex;
		flex-direction: row;
	}

	&__date {
		color: #999;
		font-size: 0.9em;
		font-weight: 300;
		margin-right: 0.5em;
		vertical-align: middle;
	}

	&__title {
		font-size: 2em;
		font-weight: 800;
	}
}

.article-title {
	align-content: center;
	display: flex;
	flex-direction: row;
	margin: 0 auto;
	max-width: 50em;

	&__logo {
		margin-right: 1.0em;
	}

	&__text {
		font-weight: 800;
		margin: 0.05em;
	}
}

.article {
	margin: 0 auto;
	max-width: 50em;

	&__date {
		color: #999;
		font-size: 0.9em;
		font-weight: 300;
	}
}

